@@ -38,7 +38,7 @@ from .termui import prompt, confirm, get_terminal_size, echo_via_pager, \
 
 # Exceptions
 from .exceptions import ClickException, UsageError, BadParameter, \
-     FileError, Abort, NoSuchOption, BadOptionUsage
+     FileError, Abort, NoSuchOption, BadOptionUsage, MissingParameter
 
 # Formatting
 from .formatting import HelpFormatter, wrap_text
@@ -72,7 +72,7 @@ __all__ = [
 
     # Exceptions
     'ClickException', 'UsageError', 'BadParameter', 'FileError',
-    'Abort', 'NoSuchOption', 'BadOptionUsage',
+    'Abort', 'NoSuchOption', 'BadOptionUsage', 'MissingParameter',
 
     # Formatting
     'HelpFormatter', 'wrap_text',
